mysql-deploy.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: gc-mysql
  labels:
    app: gc
spec:
  ports:
    - port: 3306
  selector:
    app: gc
    tier: mysql
  clusterIP: None
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gc-mysql
spec:
  selector:
    matchLabels:
      app: gc
      tier: mysql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: gc
        tier: mysql
    spec:
      containers:
      - image: mysql:5.6
        name: mysql
        ports:
        - containerPort: 3306
          name: mysql
        volumeMounts:
          - name: mysql-persistent-storage
            mountPath: /var/lib/mysql
      volumes:
      - name: mysql-persistent-storage
        hostPath:
          path: /mysql-data
