gestionclient-web-deploy.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: gestionclient-web
  labels:
    app: gestionclient
spec:
  ports:
  - name: toto
    protocol: TCP
    port: 8080
    targetPort: 8080
  selector:
    app: gestionclient
    tier: web
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gestionclient-web
  labels:
    app: gestionclient
spec:
  replicas: 3
  selector:
    matchLabels:
      app: gestionclient
      tier: web
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: gestionclient
        tier: web
    spec:
      containers:
      - image: localhost:5000/gestionclients-front:0.0.2-SNAPSHOT
        name: gestionclient-web
        ports:
        - containerPort: 8080
          name: http
        imagePullPolicy: Always        
        readinessProbe:
          httpGet:
            path: /actuator/health
            port: 8080
          initialDelaySeconds: 10
          timeoutSeconds: 2
          periodSeconds: 3
          failureThreshold: 1

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: web-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.frontend.passHostHeader: "true"
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: gestionclient-web
          servicePort: toto
